<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_cache"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_cache"/>    
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"/>
    <item
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_undo"/>
	<item
        android:id="@+id/action_redo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_redo"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
	<item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_home"/>	
</menu>
