<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/labelOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelOnline" />

    <Spinner
        android:id="@+id/spinnerOnline"
        android:entries="@array/online_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/labelSearchBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerOnline"
        android:text="@string/labelSearchBy" />

    <Spinner
        android:id="@+id/spinnerSearchBy"
        android:entries="@array/searchBy_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/labelSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerSearchBy"
        android:text="@string/labelSearch" />

    <EditText
        android:id="@+id/searchEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/labelResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchEntry"
        android:text="@string/labelResults" />
    
    <ListView
        android:id = "@+id/listResults"
        android:layout_width="fill_parent" 
        android:dividerHeight="1dp"
        android:layout_below="@+id/labelResults"
        android:layout_height = "fill_parent" >
    </ListView> 

</LinearLayout>