<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#80000000">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="1dp"
   		android:background="@drawable/background3"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="0dip"
            android:layout_margin="50dp"
            android:layout_weight="0.50"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/searchpreview" />

            <TextView
                android:id="@+id/searchpreviewtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/pagepreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:maxLines="5"/>

            <LinearLayout
                android:id="@+id/PageView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonreturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonReturn"
                    android:background="@drawable/custom_button"
            		android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonselect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buttonSelect"
                    android:background="@drawable/custom_button"
            		android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>